--- a/without-redux.html
+++ b/without-redux.html
@@ -18,6 +18,7 @@
   </style>
   <div id="red"></div>
   <div id="green"></div>
+  <div id="blue"></div>
   <script>
     function red(){
       document.querySelector('#red').innerHTML= `
@@ -25,6 +26,7 @@
           <h1>Red</h1>
           <input type="button" value="fire" onclick="
             document.querySelector('#component_red').style.backgroundColor='red';
+            document.querySelector('#component_green').style.backgroundColor='red';
           ">  
         </div>
       `
@@ -35,12 +37,26 @@
           <h1>Green</h1>
           <input type="button" value="fire" onclick="
             document.querySelector('#component_green').style.backgroundColor='green';
+            document.querySelector('#component_red').style.backgroundColor='green';
+          ">  
+        </div>
+      `
+    }
+    function blue(){
+      document.querySelector('#blue').innerHTML= `
+        <div class='container' id="component_blue">
+          <h1>Blue</h1>
+          <input type="button" value="fire" onclick="
+            document.querySelector('#component_blue').style.backgroundColor='blue';
+            document.querySelector('#component_red').style.backgroundColor='blue';
+            document.querySelector('#component_green').style.backgroundColor='blue';
           ">  
         </div>
       `
     }
     red()
     green()
+    blue()
   </script>
 
 </body>
