feat: make buttons affect other containers' style

--- a/without-redux.html
+++ b/without-redux.html
@@ -27,6 +27,7 @@
           <input type="button" value="fire" onclick="
             document.querySelector('#component_red').style.backgroundColor='red';
             document.querySelector('#component_green').style.backgroundColor='red';
+            document.querySelector('#component_blue').style.backgroundColor='red';
           ">  
         </div>
       `
@@ -38,6 +39,7 @@
           <input type="button" value="fire" onclick="
             document.querySelector('#component_green').style.backgroundColor='green';
             document.querySelector('#component_red').style.backgroundColor='green';
+            document.querySelector('#component_blue').style.backgroundColor='green';
           ">  
         </div>
       `
