feat: debugging with redux-dev-tools

--- a/with-redux.html
+++ b/with-redux.html
@@ -34,7 +34,7 @@
       }
       return state
     }
-    const store = Redux.createStore(reducer)
+    const store = Redux.createStore(reducer, window.__REDUX_DEVTOOLS_EXTENSION__ && window.__REDUX_DEVTOOLS_EXTENSION__())
     function red(){
       const state = store.getState()
       document.querySelector('#red').innerHTML= `
